postgress-ingress-configuration/kubernetes-dashboard.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
    name: kubernetes-dashboard

---
kind: Service
apiVersion: v1
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 443
          targetPort: 8443
    selector:
        k8s-app: kubernetes-dashboard

---
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: kubernetes-dashboard
    template:
        metadata:
            labels:
                k8s-app: kubernetes-dashboard
        spec:
            securityContext:
                seccompProfile:
                    type: RuntimeDefault
            containers:
                - name: kubernetes-dashboard
                  image: kubernetesui/dashboard:v2.7.0
                  imagePullPolicy: Always
                  #   ports:
                  #       - containerPort: 8443
                  #         protocol: TCP
                  ports:
                      - containerPort: 9090
                        protocol: TCP
                  args:
                      #- --auto-generate-certificates
                      - --namespace=kubernetes-dashboard
                      - "--namespace=default"
                      - "--insecure-bind-address=0.0.0.0"
                      - "--enable-insecure-login"
                      # - '--insecure-port=5443'
                      # Uncomment the following line to manually specify Kubernetes API server Host
                      # If not specified, Dashboard will attempt to auto discover the API server and connect
                      # to it. Uncomment only if the default does not work.
                      # - --apiserver-host=http://my-address:port
                  volumeMounts:
                      - name: kubernetes-dashboard-certs
                        mountPath: /certs
                        # Create on-disk volume to store exec logs
                      - mountPath: /tmp
                        name: tmp-volume
                  livenessProbe:
                      httpGet:
                          scheme: HTTPS
                          path: /
                          port: 8443
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsUser: 1001
                      runAsGroup: 2001
            volumes:
                - name: kubernetes-dashboard-certs
                  secret:
                      secretName: kubernetes-dashboard-certs
                - name: tmp-volume
                  emptyDir: {}
            serviceAccountName: kubernetes-dashboard
            nodeSelector:
                "kubernetes.io/os": linux
            # Comment the following tolerations if Dashboard must not be deployed on master
            tolerations:
                - key: node-role.kubernetes.io/master
                  effect: NoSchedule

---
kind: Service
apiVersion: v1
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 8000
          targetPort: 8000
    selector:
        k8s-app: dashboard-metrics-scraper

---
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: dashboard-metrics-scraper
    template:
        metadata:
            labels:
                k8s-app: dashboard-metrics-scraper
        spec:
            securityContext:
                seccompProfile:
                    type: RuntimeDefault
            containers:
                - name: dashboard-metrics-scraper
                  image: kubernetesui/metrics-scraper:v1.0.8
                  ports:
                      - containerPort: 8000
                        protocol: TCP
                  livenessProbe:
                      httpGet:
                          scheme: HTTP
                          path: /
                          port: 8000
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  volumeMounts:
                      - mountPath: /tmp
                        name: tmp-volume
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsUser: 1001
                      runAsGroup: 2001
            serviceAccountName: kubernetes-dashboard
            nodeSelector:
                "kubernetes.io/os": linux
            # Comment the following tolerations if Dashboard must not be deployed on master
            tolerations:
                - key: node-role.kubernetes.io/master
                  effect: NoSchedule
            volumes:
                - name: tmp-volume
                  emptyDir: {}
