postgress-ingress-configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gateway-ingress
spec:
    rules:
        - host: api.medicos
          http:
              paths:
                  - path: /user
                    pathType: Prefix
                    backend:
                        service:
                            name: user-api
                            port:
                                number: 8080
                #   - path: /user/swagger-ui.html
                #     pathType: Prefix
                #     backend:
                #         service:
                #             name: user-api
                #             port:
                #                 number: 8080
                #   - path: /
                #     pathType: Prefix
                #     backend:
                #         service:
                #             name: user-api
                #             port:
                #                 number: 8080
                  - path: /product/
                    pathType: Prefix
                    backend:
                        service:
                            name: product-api
                            port:
                                number: 8081
                  - path: /shopping/
                    pathType: Prefix
                    backend:
                        service:
                            name: shopping-api
                            port:
                                number: 8082
